syntax = "proto3";

package api.auth.v1;

import "google/api/annotations.proto";

option go_package = "JobblyBE/api/auth/v1;v1";
option java_multiple_files = true;
option java_package = "api.auth.v1";

service Auth {
	rpc Register (RegisterRequest) returns (AuthReply) {
		option (google.api.http) = {
			post: "/api/v1/auth/register"
			body: "*"
		};
	}
	
	rpc Login (LoginRequest) returns (AuthReply) {
		option (google.api.http) = {
			post: "/api/v1/auth/login"
			body: "*"
		};
	}
	
	rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {
		option (google.api.http) = {
			post: "/api/v1/auth/refresh"
			body: "*"
		};
	}
	
	rpc GetProfile (GetProfileRequest) returns (GetProfileReply) {
		option (google.api.http) = {
			get: "/api/v1/auth/profile"
		};
	}
	
	rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileReply) {
		option (google.api.http) = {
			put: "/api/v1/auth/profile"
			body: "*"
		};
	}
	
	rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordReply) {
		option (google.api.http) = {
			post: "/api/v1/auth/change-password"
			body: "*"
		};
	}
	
	rpc Logout (LogoutRequest) returns (LogoutReply) {
		option (google.api.http) = {
			post: "/api/v1/auth/logout"
			body: "*"
		};
	}
}

message RegisterRequest {
	string full_name=1;
	string email=2;
	string password=3;
	string phone_number=4;
}

message LoginRequest {
	string email=1;
	string password=2;
}

message AuthReply {
	string access_token=1;
	string refresh_token=2;
	message User{
		string full_name=1;
		string email=2;
		string phone_number=3;
		string role=4;
	}
	User user=3;
}

message RefreshTokenRequest {
	string refresh_token=1;
}

message RefreshTokenReply {
	string access_token=1;
}

message GetProfileRequest {}

message GetProfileReply {
	string full_name=1;
	string email=2;
	string phone_number=3;
	string role=4;
}

message UpdateProfileRequest {
	string full_name=1;
	string phone_number=2;
}

message UpdateProfileReply {
	string full_name=1;
	string email=2;
	string phone_number=3;
	string role=4;
}

message ChangePasswordRequest {
	string old_password=1;
	string new_password=2;
}

message ChangePasswordReply {
	string message=1;
}

message LogoutRequest {
	string refresh_token=1;
}

message LogoutReply {
	string message=1;
}

